update code about stage 6 and somethong stage 3,4,5